--- a/.github/workflows/Build-CupangOs.yml
+++ b/.github/workflows/Build-CupangOs.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lean_x86_64,Lean_x86_64_Long]  #[Lean_x86_64,Lean_x86_64_Long]
+        target: [Lean_x86_64,Lean_x86_64_Long,Lean_s905x]  #[Lean_x86_64,Lean_x86_64_Long,Lean_s905x]
 
     steps:
     - name: Ready to complete
