--- a/.github/workflows/Build-kiaOs.yml
+++ b/.github/workflows/Build-kiaOs.yml
@@ -5,7 +5,7 @@
 # <https://github.com/P3TERX/Actions-OpenWrt.git>
 #
 
-name: Compile CupangOs
+name: Compile kiaOs-x86_64
 
 on:
   workflow_dispatch:
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        target: [Lean_x86_64,Lean_x86_64_Long,Lean_s905x]  #[Lean_x86_64,Lean_x86_64_Long,Lean_s905x]
+        target: [Lean_x86_64,Lean_x86_64_Long]  #[Lean_x86_64,Lean_x86_64_Long]
 
     steps:
     - name: Ready to complete
